# XCut

./: BENCHMARKS.md  EVAL.md  Makefile  README.md  XSLT_COMPARISON.md  pyproject.toml  xform-transformations-1.0.md  xform-transformations-2.0.md
.github/workflows/: ci-go.yml  ci-python.yml  ci-rust.yml  ci-swift.yml  ci-ts.yml  ci.yml
benchmarks/realworld/jats/: .gitignore  README.md  input.xml  transform.xform  transform.xsl
scripts/: bench_realworld_jats.py  bench_speed.py  compare_transformations.py
tests/: test_cli.py  test_eval.py  test_parser.py  test_transformations.py  test_xmlmodel.py
tests/fixtures/: SOURCES.md
tests/fixtures/case01/: README.md  expected.xml  input.xml  transform.xform  transform.xsl
tests/fixtures/case02/: README.md  expected.xml  input.xml  transform.xform  transform.xsl
tests/fixtures/case03/: README.md  expected.xml  input.xml  transform.xform  transform.xsl
tests/fixtures/case04/: README.md  expected.xml  input.xml  transform.xform  (+1 more)
xform/: __init__.py  __main__.py  ast.py  cli.py  eval.py  parser.py  xmlmodel.py
xform-go/: ast.go  eval.go  go.mod  lexer.go  parser.go  xform  xmlmodel.go
xform-rs/: Cargo.toml
xform-rs/src/: ast.rs  eval.rs  lexer.rs  lib.rs  parser.rs  xmlmodel.rs
xform-swift/: Package.swift
xform-swift/.build/: build.db  release.yaml
xform-ts/: package-lock.json  package.json  tsconfig.json
xform-ts/src/: ast.ts  cli.ts  eval.ts  index.ts  lexer.ts  node-shims.d.ts  parser.ts  xmlmodel.ts
zopyx/: __init__.py
zopyx/xform/: __init__.py  __main__.py  cli.py  parser.py  xmlmodel.py
(+96 files in other folders)
